fixed overlapping branding bar and aside/nav issue on desktop. kept them aligned, pushed nav down 45px

--- a/css/wwc-stylee.css
+++ b/css/wwc-stylee.css
@@ -109,7 +109,7 @@ a{
 aside{
 	position:fixed;
 	min-width:225px;
-	margin-top:-45px;
+	padding-top:-45px;
 	height:100%; 
 	background-color:#25305d;
 }
